syntax = "proto3";

message ActivatingDeviceVipReq {
  string serialNumber = 1;
  string activationCode = 2;
}

message ActivatingDeviceVipResp {
  int64 code = 1;
  string msg = 2;
  string data = 3;
}

message QueryVipConfigReq {
  string serialNumber = 1;
}

message QueryVipConfigResp {
  int64 code = 1;
  string msg = 2;
  QueryVipConfigRespData data = 3;
}

message QueryVipConfigRespData {
  int32 vipLevel = 1;
  int64 endTime = 2;
  string sn = 3;
}

service Mms {
  // group: device
  rpc activatingDeviceVip (ActivatingDeviceVipReq) returns (ActivatingDeviceVipResp);
  // group: device
  rpc QueryVipConfig (QueryVipConfigReq) returns (QueryVipConfigResp);
}